--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -14,4 +14,11 @@
         font-size: 32px;
         font-weight: 400;
     }
+
+    &__Temp {
+        font-size: 20px;
+        font-weight: 400;
+        text-transform: capitalize;
+    }
+
 }
