--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -6,7 +6,7 @@
     padding: 12px 5vw;
 
     @media (max-width: 600px) {
-        justify-content: center;
+        // justify-content: center;
         flex-flow: row wrap;
     }
 
