--- a/src/components/recipe/Recipe.module.scss
+++ b/src/components/recipe/Recipe.module.scss
@@ -97,6 +97,37 @@
             }
         }
     }
+    &__Footer {
+        padding: 10px 10px 20px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        min-width: 85%;
+        margin: 10px;
+        &__Btn {
+            // margin: 0 auto;
+            width: 50%;
+            background: #fff;
+            color: mediumseagreen;
+            border: 1px solid mediumseagreen;
+            border-radius: 5px;
+            transition: all .3s ease-in-out;
+            font-size: medium;
+            padding: 8px 12px;
+
+            &:hover {
+                background: mediumseagreen;
+                border: 1px solid #fff;
+                color: #fff;
+                box-shadow: 0 2px 3px rgba(255, 255, 255, .2);
+                cursor: pointer;
+            }
+            &:focus,
+            &:active {
+                outline: none;
+            }
+        }
+    }
 }
 
 .NoRecipe {
