--- a/src/components/sip/Sip.module.scss
+++ b/src/components/sip/Sip.module.scss
@@ -1,6 +1,30 @@
 .Sip {
     min-height: calc(100vh - 64px);
 
+    &__Tabs {
+        display: flex;
+        align-items: center;
+        justify-content: space-evenly;
+        width: 100%;
+        flex-flow: row nowrap;
+        overflow-x: scroll;
+        box-shadow: 0 2px 2px rgba(mediumseagreen, .2);
+
+        &__Item {
+            flex: 1;
+            min-width: 35%;
+            border: 1px solid rgba(mediumseagreen, .5);
+            color: #fff;
+            text-transform: uppercase;
+
+            &:hover,
+            &__Active {
+                border: 1px solid rgba(mediumseagreen, .7);
+                box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+            }
+        }
+    }
+
     &__Table {
         padding: 20px;
         table {
